add test and update template

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+{% load staticfiles %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 <html>
 <head>
     <title></title>
